# rgray

./: .clang-  .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md
.github/workflows/: release.yml  style.yml
bindings/mri/: CMakeLists.txt
bindings/mri/include/: fix_win32_compatibility.h  main.h  ruby_adapter.h  ruby_values.h
bindings/mri/include/audio/: audio_bindings.h  audio_stream_bindings.h  music_bindings.h  sound_bindings.h  wave_bindings.h
bindings/mri/include/graphics/: bitmap_bindings.h  color_bindings.h  draw_bindings.h  font_bindings.h  gui_bindings.h  material_bindings.h  mesh_bindings.h  model_bindings.h  render_texture_bindings.h  shader_bindings.h  shapes_bindings.h  sprite_bindings.h
bindings/mri/include/input/: gamepad_bindings.h  gestures_bindings.h  keyboard_bindings.h  mouse_bindings.h  touch_bindings.h  vr_bindings.h
bindings/mri/include/math/: circle_bindings.h  ease_bindings.h  math_bindings.h  rect_bindings.h  ring_bindings.h  table_bindings.h  vec2_bindings.h  vec3_bindings.h  vec4_bindings.h
bindings/mri/include/physics/: camera_bindings.h
bindings/mri/include/system/: automation_event_bindings.h  files_bindings.h  graphics_bindings.h  kernel_bindings.h  log_bindings.h
bindings/mri/src/: main.cpp
bindings/mri/src/audio/: audio_bindings.cpp  audio_stream_bindings.cpp  music_bindings.cpp  sound_bindings.cpp  wave_bindings.cpp
bindings/mri/src/graphics/: bitmap_bindings.cpp  color_bindings.cpp  draw_bindings.cpp  font_bindings.cpp  gui_bindings.cpp  material_bindings.cpp  mesh_bindings.cpp  model_bindings.cpp  render_texture_bindings.cpp  shader_bindings.cpp  shapes_bindings.cpp  sprite_bindings.cpp
bindings/mri/src/input/: gamepad_bindings.cpp  gestures_bindings.cpp  keyboard_bindings.cpp  mouse_bindings.cpp  touch_bindings.cpp  vr_bindings.cpp
bindings/mri/src/math/: circle_bindings.cpp  ease_bindings.cpp  ellipse_bindings.cpp  line_bindings.cpp  math_bindings.cpp  pixel_bindings.cpp  polygon_bindings.cpp  rect_bindings.cpp  ring_bindings.cpp  spline_bindings.cpp  table_bindings.cpp  triangle_bindings.cpp  vec2_bindings.cpp  vec3_bindings.cpp  vec4_bindings.cpp
bindings/mri/src/physics/: camera_bindings.cpp
bindings/mri/src/system/: automation_event_bindings.cpp  files_bindings.cpp  graphics_bindings.cpp  kernel_bindings.cpp  log_bindings.cpp
cmake/: CPM.cmake  StaticAnalyzers.cmake  tools.cmake
configured_files/: config.hpp.in
doc/: audio.rb  audio_stream.rb  bitmap.rb  camera.rb  circle.rb  color.rb  draw.rb  ease.rb  font.rb  gamepad.rb  gestures.rb  graphics.rb  gui.rb  kernel.rb  keyboard.rb  math.rb  mouse.rb  music.rb  rect.rb  render_texture.rb  shader.rb  sound.rb  sprite.rb  touch.rb  vec2.rb  vec3.rb  vec4.rb  wave.rb
include/rgray/: raylib_values.h
include/rgray/graphics/: color.h
include/rgray/math/: vec2.h
include/rgray/system/: kernel.h
resources/: rgray.desktop.in  rgray.rc.in
src/: CMakeLists.txt
src/graphics/: color.cpp
src/math/: vec2.cpp
src/system/: kernel.cpp
tools/: generate_yard_docs.rb
